# wassword-generator

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
src/: main.rs
src/components/: bar.rs  checkbox.rs  footer.rs  form.rs  header.rs  mod.rs  range.rs  result.rs  strengths.rs
src/pages/: index.rs
src/styles/: form.scss  index.scss  layout.scss  pages.scss  reset.scss  variables.scss
src/utils/: check_strength.rs  generator.rs  mod.rs
