[package]
name = "password-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8"
web-sys = {version = "0.3.60", features = ["Clipboard", "Navigator"]}
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
strum_macros = "0.24.3"

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

